--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,17 @@
 {
-  "extends": "airbnb-base"
+  "extends": "airbnb-base",
+  "allow": ["_"]
 }
+
+// var _ = require('underscore');
+// var obj = _.contains(items, item);
+// obj.__proto__ = {};
+// var file = __filename;
+// function foo(_bar) {};
+// const foo = { onClick(_bar) {} };
+// const foo = (_bar) => {};
+
+/*eslint no-underscore-dangle: ["error", { "allow": ["foo_", "_bar"] }]*/
+
+// var foo_;
+// foo._bar();
