--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4",
+    "moongose": "^1.0.0"
   }
 }
